--- a/TuAnhtab.html
+++ b/TuAnhtab.html
@@ -119,12 +119,12 @@
         
                     <h3>Vị trí phổ biến</h3>
                     <ul>
-                        <li>3D Modeler: Chuyên tạo ra các mô hình 3D phục vụ cho các công ty, studio phim ảnh, trò chơi điện tử và quảng cáo.</li>
-                        <li>Compositor: Chịu trách nhiệm ghép hình ảnh thực tế với các hiệu ứng VFX để tạo ra một cảnh quay hoàn chỉnh đặc biệt là trong lĩnh vực phim điện ảnh, quảng cáo (TVC) và MV ca nhạc.</li>
-                        <li>Motion Graphics Artist: Tạo ra các hiệu ứng đồ họa chuyển động cho phim, quảng cáo, truyền hình với cơ hội việc làm rất đa dạng, từ các studio chuyên biệt về kỹ thuật chuyển động cho đến các tập đoàn truyền thông đa quốc gia</li>
-                        <li>FX Artist: Chuyên tạo ra các hiệu ứng như cháy nổ, sương mù, nước, gió…đang phát triển cực kỳ mạnh mẽ tại Việt Nam và trên thế giới nhờ sự bùng nổ của nội dung streaming (Netflix, Disney+), phim điện ảnh và game AAA</li>
-                        <li>Technical Director (TD): Hỗ trợ kỹ thuật và tối ưu hóa quy trình làm việc, giúp các nghệ sĩ VFX đạt hiệu suất cao nhất trong các lĩnh vực game, Điện ảnh/VFX, hay Công nghệ phần mềm</li>
-                        <li>VFX Supervisor: Người giám sát toàn bộ quá trình sản xuất VFX, làm việc trực tiếp với đạo diễn để đảm bảo chất lượng hình ảnh đạt tiêu chuẩn. Cơ hội làm việc đa dạng từ phim ảnh, quảng cáo, trò chơi điện tử , video âm nhạc và thực tế ảo VR</li>
+                        <li><strong>3D Modeler:</strong> Chuyên tạo ra các mô hình 3D phục vụ cho các công ty, studio phim ảnh, trò chơi điện tử và quảng cáo.</li>
+                        <li><strong>Compositor:</strong> Chịu trách nhiệm ghép hình ảnh thực tế với các hiệu ứng VFX để tạo ra một cảnh quay hoàn chỉnh đặc biệt là trong lĩnh vực phim điện ảnh, quảng cáo (TVC) và MV ca nhạc.</li>
+                        <li><strong>Motion Graphics Artist:</strong> Tạo ra các hiệu ứng đồ họa chuyển động cho phim, quảng cáo, truyền hình với cơ hội việc làm rất đa dạng, từ các studio chuyên biệt về kỹ thuật chuyển động cho đến các tập đoàn truyền thông đa quốc gia</li>
+                        <li><strong>FX Artist:</strong> Chuyên tạo ra các hiệu ứng như cháy nổ, sương mù, nước, gió…đang phát triển cực kỳ mạnh mẽ tại Việt Nam và trên thế giới nhờ sự bùng nổ của nội dung streaming (Netflix, Disney+), phim điện ảnh và game AAA</li>
+                        <li><strong>Technical Director (TD):</strong> Hỗ trợ kỹ thuật và tối ưu hóa quy trình làm việc, giúp các nghệ sĩ VFX đạt hiệu suất cao nhất trong các lĩnh vực game, Điện ảnh/VFX, hay Công nghệ phần mềm</li>
+                        <li><strong>VFX Supervisor:</strong> Người giám sát toàn bộ quá trình sản xuất VFX, làm việc trực tiếp với đạo diễn để đảm bảo chất lượng hình ảnh đạt tiêu chuẩn. Cơ hội làm việc đa dạng từ phim ảnh, quảng cáo, trò chơi điện tử , video âm nhạc và thực tế ảo VR</li>
 
                     </ul>
                 </div>
@@ -132,7 +132,7 @@
         </section>
 
         <section id="faq">
-            <h2>5. FAQ - Câu hỏi thường gặp</h2>
+            <h2>FAQ - Câu hỏi thường gặp</h2>
             <p><strong>1. Không biết vẽ tay có làm VFX được không?</strong> Có, vẽ tay là lợi thế nhưng tư duy không gian và thành thạo phần mềm là quan trọng nhất.</p>
             <p><strong>2. Ngành này có bị AI thay thế không?</strong> AI hỗ trợ xử lý kỹ thuật nhanh hơn, nhưng ý tưởng sáng tạo và đạo diễn hình ảnh vẫn cần con người.</p>
             <p><strong>3. Cần học bao lâu để đi làm?</strong> Tùy vào lộ trình, thường từ 2-4 năm để nắm vững các kỹ thuật chuyên sâu.</p>
@@ -156,6 +156,7 @@
 </body>
 
 </html>
+
 
 
 
