--- a/TuAnhtab.html
+++ b/TuAnhtab.html
@@ -20,10 +20,11 @@
         </div>
         <ul class="nav-links">
             <li><a href="#intro">Định nghĩa</a></li>
-            <li><a href="#fields">Lĩnh vực</a></li>
+            <li><a href="#skills">Yêu cầu</a></li>
             <li><a href="#edu">Đào tạo</a></li>
-            <li><a href="#career-opportunities">Nghề nghiệp</a></li>
+            <li><a href="#careers">Nghề nghiệp</a></li>
             <li><a href="#salary">Thu nhập</a></li>
+            <li><a href="#faq">FAQ</a></li>
         </ul>
     </header>
 
@@ -156,6 +157,7 @@
 </body>
 
 </html>
+
 
 
 
