--- a/TuAnhtab.html
+++ b/TuAnhtab.html
@@ -135,6 +135,17 @@
                            </div>
         </section>
 
+    <section id="salary">
+            <h2>5. Thu nhập bình quân</h2>
+            <table>
+                <tr><th>Vị trí / Kinh nghiệm</th><th>Mức lương (VNĐ)</th></tr>
+                <tr><td>Intern / Trainee (< 1 năm )</td><td>4 - 8 triệu/tháng</td></tr>
+                <tr><td>Junior Artist (1 – 3 năm )</td><td>12 – 22 triệu/tháng</td></tr>
+                <tr><td>Mid-level Artist (3 – 5 năm)</td><td>25 – 40 triệu/tháng</td></tr>
+                <tr><td>Senior Artist (5 - 8 năm)</td><td>45 – 70 triệu/tháng</td></tr>
+                <tr><td>Lead / Supervisor ( > 8 năm)</td><td>80 – 150 triệu/tháng+</td></tr>
+            </table>
+        </section>
         <section id="faq">
             <h2>FAQ - Câu hỏi thường gặp</h2>
             <p><strong>1. Không biết vẽ tay có làm VFX được không?</strong> Có, vẽ tay là lợi thế nhưng tư duy không gian và thành thạo phần mềm là quan trọng nhất.</p>
@@ -160,6 +171,7 @@
 </body>
 
 </html>
+
 
 
 
