--- a/TuAnhtab.html
+++ b/TuAnhtab.html
@@ -115,10 +115,12 @@
                 </a>
             </div>
             <p style="margin-top: 20px;"><strong>Khối thi:</strong> Thường xét tuyển các khối H, C, D hoặc bài thi năng khiếu riêng.</p>
+            <div class="grid grid-cols-2 gap-2 text-sm">
                         <span>• Khối H (H00, H01, H02): Bao gồm các môn năng khiếu như vẽ mỹ thuật, hình họa, kết hợp với các môn văn hóa như Toán, Văn hoặc Anh </span>
                         <span>• Khối C (C00): Đối với các trường yêu cầu xét tuyển Văn, Sử, Địa để đánh giá khả năng cảm thụ văn hóa và nghệ thuật.</span>
                         <span>• Khối D (D01): Kết hợp Toán, Văn, Anh, thường được yêu cầu nếu trường đào tạo VFX kết hợp với công nghệ hoặc ngành quốc tế.</span>
                         <span>•Xét tuyển học bạ hoặc bài thi năng khiếu riêng: Một số trường đào tạo ngành này có thể tổ chức thi vẽ, kiểm tra tư duy sáng tạo hoặc xét tuyển học bạ các môn liên quan đến mỹ thuật và công nghệ.</span>
+            </div>
         </section>
             </div>
             
@@ -175,6 +177,7 @@
 </body>
 
 </html>
+
 
 
 
