--- a/menu.html
+++ b/menu.html
@@ -111,7 +111,7 @@
                     <li class="uni-item">
                         <a href="https://tuyensinhhuongnghiep.vn/" target="_blank">
                             <div class="uni-logo"><img src="https://tuyensinhhuongnghiep.vn/upload/images/2024/01/11/tshn-ico-logo.png" alt="TSHN"></div>
-                            Thông tin tuyển sinh
+                            Tuyển sinh hướng nghiệp
                         </a>
                     </li>
             </aside>
@@ -174,6 +174,7 @@
 </body>
 
 </html>
+
 
 
 
