--- a/menu.html
+++ b/menu.html
@@ -20,7 +20,7 @@
         </div>
         <nav>
             <a href="menu.html">Trang chủ</a>
-            <a href="https://vietnamnet.vn/giao-duc/tuyen-sinh">Tin tuyển sinh</a>
+            <a href="#nganhhoc">Ngành học tiêu biểu</a>
             <a href="members.html">Liên hệ</a>
         </nav>
     </header>
@@ -119,6 +119,7 @@
         </div> <!-- KẾT THÚC main-layout chứa 3 cột -->
 
         <!-- PHẦN NGÀNH HỌC -->
+        <section id="nganhhoc">
         <div class="full-width-section">
             <h2 style="text-align: center; color: #444; margin-bottom: 20px;">Ngành học tiêu biểu</h2>
             <div class="grid-wrapper">
@@ -142,7 +143,8 @@
                 </div>
             </div>
         </div>
-
+        </section>
+            
     </main>
 
     <footer class="footer-style">
@@ -174,6 +176,7 @@
 </body>
 
 </html>
+
 
 
 
