--- a/TuAnhtab.html
+++ b/TuAnhtab.html
@@ -173,7 +173,7 @@
              </section>
 
     <footer>
-        <h2 style="color: white; border: none;">Biến trí tưởng tượng thành những thước phim sống động</h2>
+        <h2 style="color: white; border: none;">“Fake it till you make it - Giả lập sự tự tin, kích hoạt dòng sáng tạo."</h2>
         <p>Chọn ngành VFX không chỉ là chọn nghề nghiệp, mà là chọn trở thành một phù thủy hình ảnh.</p>
         <div class="credit">
             Thiết kế & Nội dung bởi: <strong>Chuyên viên Kỹ xảo Điện ảnh - Tú Anh</strong>
@@ -183,6 +183,7 @@
 </body>
 
 </html>
+
 
 
 
