--- a/menu.html
+++ b/menu.html
@@ -47,6 +47,42 @@
                     </form>
                 </div>
             </aside>
+            
+            <section class="content-center">
+                <div class="banner">
+                    <h1>MỘT SỐ NGHỀ ỨNG DỤNG <BR>CÔNG NGHỆ THÔNG TIN <BR> TRONG NGÀNH TRUYỀN THÔNG <BR>ĐA PHƯƠNG TIỆN</h1>
+     
+                </div>
+
+                <div class="intro-section">
+                    <div class="intro-image">
+                        <img src="https://github.com/congtydvva-oss/Trai-Can-Cuu-EDU/blob/main/square%20final.gif?raw=true" alt="Học tập" style="width:100%; height:100%; object-fit:cover;">
+                    </div>
+                    <div>
+                        <h2 style="color: #444; margin-top: 0;">KHỞI ĐẦU HÀNH TRÌNH CHINH PHỤC THẾ GIỚI SỐ</h2>
+                        <p>Chào bạn! Bạn đang là học sinh cấp 3, người trẻ, phụ huynh đang loay hoay với những dự định sắp tới trên con đường sự nghiệp của mình và con em, không biết liệu nghề nghiệp nào phù hợp và mình có bền bỉ trước những thách thức đầy cam go trong thị trường lao động cạnh tranh gay gắt ngày nay hay không? Hãy để Trại Cần Cừu Education - hệ thống giáo dục tư vấn tuyển sinh hàng đầu Việt Nam giải đáp những thắc mắc cũng như đưa đến cho bạn cái nhìn gần hơn để việc hướng nghiệp không còn là một vấn đề nan giải✨️</p>
+                        <p style="color: #ff9aa2; font-style: italic;">"Học vấn là chìa khóa mở cánh cửa tương lai."</p>
+                    </div>
+                </div>
+
+                <div style="margin-top: 30px; border-top: 2px solid #fdf2f2; padding-top: 20px;">
+                    <h3 style="color: #444; text-align: center;">BẠN ĐANG DO DỰ TRƯỚC NGƯỠNG CỬA SỰ NGHIỆP? ĐỂ TRẠI CẦN CỪU "BẮT BÀI" GIÚP BẠN!</h3>
+                    <div style="display: flex; flex-direction: column; gap: 15px; margin-top: 15px;">
+                        <div style="background: #fff; border-left: 4px solid #ff9aa2; padding: 10px 15px; box-shadow: 0 2px 5px rgba(0,0,0,0.05);">
+                            <strong style="color: #ff9aa2;">🤖 AI CÓ PHẢI LÀ "KẺ THÙ" CỦA DÂN SÁNG TẠO?</strong>
+                            <p style="font-size: 0.9em; margin: 5px 0;">AI có thể vẽ một bức tranh, nhưng AI không biết "<b>Cảm xúc</b>". AI có thể viết một đoạn code, nhưng AI không có "<b>Tư duy chiến lược</b>".Tại Trại Cần Cừu, chúng tôi không dạy bạn sợ AI, chúng tôi dạy bạn cách biến AI thành "<b>trợ lý đắc lực</b>". Khi bạn làm chủ công nghệ, bạn không bị thay thế – bạn trở thành người điều khiển cuộc chơi.</p>
+                        </div>
+                        <div style="background: #fff; border-left: 4px solid #ff9aa2; padding: 10px 15px; box-shadow: 0 2px 5px rgba(0,0,0,0.05);">
+                            <strong style="color: #ff9aa2;">💼 THỊ TRƯỜNG ĐÃ BÃO HÒA HAY CƠ HỘI ĐANG BÙNG NỔ?</strong>
+                            <p style="font-size: 0.9em; margin: 5px 0;">Thế giới đang chuyển mình sang kinh tế số. Mỗi giây trôi qua, hàng nghìn doanh nghiệp mới ra đời và tất cả đều cần Website, Video, Hình ảnh và Chiến dịch truyền thông.Cơ hội không bao giờ ít, nó chỉ chuyển từ "làm việc chân tay" sang "<b>làm việc trí tuệ</b>". Chỉ cần bạn có kỹ năng, thị trường sẽ săn đón bạn với mức đãi ngộ xứng đáng.</p>
+                        </div>
+                        <div style="background: #fff; border-left: 4px solid #ff9aa2; padding: 10px 15px; box-shadow: 0 2px 5px rgba(0,0,0,0.05);">
+                            <strong style="color: #ff9aa2;">🏢 KHÔNG CẦN CHỜ ĐỢI TẬP ĐOÀN LỚN – TỰ XÂY DỰNG ĐẾ CHẾ RIÊNG!</strong>
+                            <p style="font-size: 0.9em; margin: 5px 0;">Trong ngành sáng tạo, "<b>Portfolio (Sản phẩm thực tế)</b>" là tấm vé thông hành quyền lực nhất.Bạn không cần chờ đợi một tập đoàn lớn gật đầu. Với một chiếc laptop, bạn có thể là <b>Freelancer</b> nhận dự án nghìn đô từ Mỹ, là <b>Content Creator </b>triệu view trên mạng xã hội, hoặc tự khởi nghiệp kinh doanh dựa trên chính nền tảng công nghệ mình làm chủ.</p>
+                        </div>
+                    </div>
+                </div>
+            </section>
 
             <!-- Cột giữa -->
             <section class="content-center">
