--- a/menu.html
+++ b/menu.html
@@ -22,7 +22,8 @@
             <a href="menu.html">Trang chủ</a>
             <a href="#nganhhoc">Ngành học tiêu biểu</a>
             <a href="members.html">Liên hệ</a>
-        </nav>
+            <a href="scholarship.html"> Học bổng</a>
+            <a href="influencers.html"> Câu Chuyện truyền cảm hứng </a>
     </header>
 
     <main>
@@ -47,7 +48,7 @@
                     </form>
                 </div>
             </aside>
-            
+
             <section class="content-center">
                 <div class="banner">
                     <h1>MỘT SỐ NGHỀ ỨNG DỤNG <BR>CÔNG NGHỆ THÔNG TIN <BR> TRONG NGÀNH TRUYỀN THÔNG <BR>ĐA PHƯƠNG TIỆN</h1>
@@ -84,7 +85,7 @@
                 </div>
             </section>
 
-
+           
             <!-- Cột phải -->
             <aside class="aside-right">
                 <h3 class="section-title">TOP ĐẠI HỌC VN</h3>
@@ -194,7 +195,6 @@
 </body>
 
 </html>
-
 
 
 
