--- a/scholarship.html
+++ b/scholarship.html
@@ -1,3 +1,11 @@
+<!DOCTYPE html>
+<html lang="vi">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Tư vấn nghề Chuyên viên Thiết kế Truyền thông Đa phương tiện</title>
+    <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@400;500;600;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="styleddtest.css">
 <style>
     /* Sử dụng palette màu từ styleddtest.css */
     :root {
@@ -188,6 +196,7 @@
         .card-top { flex-direction: column; gap: 10px; }
     }
 </style>
+</head>
 <header>
         <div class="logo-area">
             <div class="brand-logo">
