--- a/menu.html
+++ b/menu.html
@@ -23,7 +23,7 @@
             <a href="#nganhhoc">Ngành học tiêu biểu</a>
             <a href="members.html">Liên hệ</a>
             <a href="scholarship.html"> Học bổng</a>
-            <a href="influencers.html"> Câu Chuyện truyền cảm hứng </a>
+            <a href="influencers.html"> Câu truyện truyền cảm hứng </a>
     </header>
 
     <main>
@@ -195,6 +195,7 @@
 </body>
 
 </html>
+
 
 
 
