--- a/khanhvytab.html
+++ b/khanhvytab.html
@@ -93,23 +93,20 @@
 </head>
 <body>
 
-     <header>
+    <header>
         <div class="logo-area">
-            <div class="brand-logo">
-                <a href="menu.html">
-                    <img src="https://scontent.fvca1-3.fna.fbcdn.net/v/t39.30808-6/621800187_1712308776395965_7247490065487986686_n.jpg?stp=dst-jpg_p180x540_tt6&_nc_cat=110&ccb=1-7&_nc_sid=127cfc&_nc_ohc=rj3IHwu3Hi4Q7kNvwHy0mwi&_nc_oc=AdmOupWnM40qdRdXcnS_5gLT5aMSgHA0UWlue9PQvyNJbk7EsG7YtQxWAkNxggm5boo&_nc_zt=23&_nc_ht=scontent.fvca1-3.fna&_nc_gid=d1ba8QmTHoxrpj79A8nblg&oh=00_AfpZqaumrly5GOkCczgxDGNWOQz4x2kvhzR7tl2OXRfMPQ&oe=69812E67" alt="Logo" class="logo-img">
-                </a>
-            </div>
-            <div class="brand-name"><span> Trại Cần Cừu EDUCATION</span></div>
+            <img src="https://scontent.fvca1-3.fna.fbcdn.net/v/t39.30808-6/621800187_1712308776395965_7247490065487986686_n.jpg?stp=dst-jpg_p180x540_tt6&_nc_cat=110&ccb=1-7&_nc_sid=127cfc&_nc_ohc=rj3IHwu3Hi4Q7kNvwHy0mwi&_nc_oc=AdmOupWnM40qdRdXcnS_5gLT5aMSgHA0UWlue9PQvyNJbk7EsG7YtQxWAkNxggm5boo&_nc_zt=23&_nc_ht=scontent.fvca1-3.fna&_nc_gid=d1ba8QmTHoxrpj79A8nblg&oh=00_AfpZqaumrly5GOkCczgxDGNWOQz4x2kvhzR7tl2OXRfMPQ&oe=69812E67" alt="Logo" class="brand-logo">
+            <div class="brand-name">Graphic<span>Designer</span></div>
         </div>
         <ul class="nav-links">
             <li><a href="#intro">Định nghĩa</a></li>
-            <li><a href="#fields">Lĩnh vực</a></li>
-            <li><a href="#edu">Đào tạo</a></li>
-            <li><a href="#career-opportunities">Nghề nghiệp</a></li>
+            <li><a href="#jobs">Công việc</a></li>
             <li><a href="#salary">Thu nhập</a></li>
+            <li><a href="#edu">Đào tạo</a></li>
+            <li><a href="#faq">Hỏi đáp</a></li>
         </ul>
     </header>
+
     <section class="hero" style="background: none; box-shadow: none;">
         <div class="hero-text">
             <h1>KHƠI MỞ TƯƠNG LAI SÁNG TẠO</h1>
@@ -251,6 +248,3 @@
 
 </body>
 </html>
-
-
-
